--- a/templates/raw_data.html
+++ b/templates/raw_data.html
@@ -5,7 +5,7 @@
     <title>Raw Data</title>
   </head>
   <body>
-      <table>
+      <table border="1" style="text-align:center;">
           {%for record in data %}
               <tr>
                   {%for r in record%}
