Created index and geo data pages, added routes to flask app. Changed Tableau embed link to real dashboard. Added new visualizations file.

--- a/templates/dashboards.html
+++ b/templates/dashboards.html
@@ -8,7 +8,7 @@
     <script type="text/javascript">
         function initViz() {
             var containerDiv = document.getElementById("vizContainer"),
-                url = "https://public.tableau.com/views/Volcano_examplegraph/VolcanoesbyRegion?:embed=y&:display_count=yes&publish=yes&:origin=viz_share_link",
+                url = "https://public.tableau.com/views/Project2Visualizations_2/CountryElevation?:embed=y&:display_count=yes&:origin=viz_share_link",
                 options = {
                     hideTabs: true,
                     onFirstInteractive: function () {
