Added bootstrapped htmls, wiki scrape content

--- a/templates/raw_data.html
+++ b/templates/raw_data.html
@@ -3,6 +3,42 @@
   <head>
     <meta charset="UTF-8">
     <title>Raw Data</title>
+
+  <!-- Bring in our bootstrap stylesheet -->      
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">  
+    <link rel="stylesheet" href="style.css">
+
+
+    <!-- Bring in our bootstrap stylesheet -->          
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">  
+        <link rel="stylesheet" href="style.css">
+    
+ <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="index.html">Volcanoes R Us</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="raw_data.html">Raw Data <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="geo_data.html">Geo Data</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="dashboards.html">Visualizations</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+  </head>
+  <body>
+
+  <br>
+  <h1> Raw Data Table  </h1> 
+
   </head>
   <body>
       <table border="1" style="text-align:center;">
