--- a/templates/dashboards.html
+++ b/templates/dashboards.html
@@ -8,7 +8,8 @@
     <script type="text/javascript">
         function initViz() {
             var containerDiv = document.getElementById("vizContainer"),
-                url = "https://public.tableau.com/views/Project2Visualizations_2/CountryElevation?:embed=y&:display_count=yes&:origin=viz_share_link",
+                url = "https://public.tableau.com/views/Project2VisualizationsTriangle/VolcanoLocationPlot?:embed=y&:display_count=yes&publish=yes&:origin=viz_share_link",
+
                 options = {
                     hideTabs: true,
                     onFirstInteractive: function () {
@@ -20,7 +21,37 @@
             // Create a viz object and embed it in the container div.
         }
     </script>
+
+    <!-- Bring in our bootstrap stylesheet -->          
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">  
+        <link rel="stylesheet" href="style.css">
+    
+ <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="index.html">Volcanoes R Us</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+         <a class="nav-link" href="raw_data.html">Raw Data <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="geo_data.html">Geo Data</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="dashboards.html">Visualizations</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
   </head>
+
+  <br>
+  <h1> Dashboards  </h1> 
+  <hr>
+
   <body onload="initViz();">
     <div id="vizContainer" style="width:800px; height:700px;"></div>
     <script src="https://prod-useast-a.online.tableau.com/#/site/bootcampproject2/views/InitialVisualizations/TectonicSetting?:iid=1/javascripts/api/tableau-2.min.js"></script>
