--- a/templates/dashboards.html
+++ b/templates/dashboards.html
@@ -3,88 +3,91 @@
 
 <head>
   <meta charset="UTF-8">
+  <link rel='icon' href='static/favicon.ico' type='image/x-icon'/ >
   <title>Dashboards</title>
+
   <script type="text/javascript" src="https://public.tableau.com/javascripts/api/tableau-2.min.js"></script>
-  <script type="text/javascript">
-  </script>
+  <script type="text/javascript"></script>
 
   <!-- Bring in our bootstrap stylesheet -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="static/style.css">
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">Volcanoes R Us</a>
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: skyblue;">
+    <a class="navbar-brand" href="/">Volcanopedia</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item active">
+        <li class="nav-item">
           <a class="nav-link" href="/data">Raw Data <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/geo">Geo Data</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item active">
           <a class="nav-link" href="/dashboards">Visualizations</a>
         </li>
       </ul>
     </div>
   </nav>
 
+<br>
+<br>
 
 </head>
 
-<body>
-<br>
-<h1> Dashboards </h1>
-<hr>
+<body id="fixed">
+  <br>
+  <h1> Dashboards </h1>
+  <hr>
 
-<script>
-  var vizDiv = document.getElementById('viz');
-  
-  var vizURL =
-    "https://public.tableau.com/views/Project2VisualizationsTriangle/VolcanoLocationPlot?:embed=y&:display_count=yes&publish=yes&:origin=viz_share_link";
+  <script>
+    var vizDiv = document.getElementById('viz');
 
-  var options = {
+    var vizURL =
+      "https://public.tableau.com/views/Project2VisualizationsTriangle/VolcanoLocationPlot?:embed=y&:display_count=yes&publish=yes&:origin=viz_share_link";
 
-    width: '1400px',
+    var options = {
 
-    height: '1000px',
+      width: '1550px',
 
-    hideToolbar: true,
+      height: '1000px',
 
-    hideTabs: false,
+      hideToolbar: true,
 
-    onFirstInteractive: function () {
+      hideTabs: false,
 
-      document.getElementById('sheetName').innerHTML = viz.getWorkbook().getActiveSheet().getName();
+      onFirstInteractive: function () {
+
+        document.getElementById('sheetName').innerHTML = viz.getWorkbook().getActiveSheet().getName();
+
+      }
+
+    };
+
+    viz = new tableauSoftware.Viz(vizDiv, vizURL, options);
+
+
+    viz.addEventListener('tabswitch', function (event) {
+
+      document.getElementById('sheetName').innerHTML = event.getNewSheetName();
+
+    });
+
+
+
+    function switchView(sheetName) {
+
+      workbook = viz.getWorkbook();
+
+      workbook.activateSheetAsync(sheetName);
 
     }
-
-  };
-
-  viz = new tableauSoftware.Viz(vizDiv, vizURL, options);
-
-
-  viz.addEventListener('tabswitch', function (event) {
-
-    document.getElementById('sheetName').innerHTML = event.getNewSheetName();
-
-  });
-
-
-
-  function switchView(sheetName) {
-
-    workbook = viz.getWorkbook();
-
-    workbook.activateSheetAsync(sheetName);
-
-  }
-</script>
+  </script>
 </body>
 
 </html>
