--- a/templates/raw_data.html
+++ b/templates/raw_data.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <link rel='icon' href='static/favicon.ico' type='image/x-icon'/ >
   <title>Raw Data</title>
 
   <!-- Bring in our bootstrap stylesheet -->
@@ -10,8 +11,8 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="static/style.css">
 
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="/">Volcanoes R Us</a>
+  <nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background-color: skyblue;">
+    <a class="navbar-brand" href="/">Volcanopedia</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -33,6 +34,9 @@
 
 </head>
 
+<br>
+<br>
+
 <body>
 
   <br>
@@ -40,8 +44,23 @@
 
   </head>
 
-  <body>
-    <table class="table table-striped table-dark" border="2" cellpadding="10">
+  <body id="fixed">
+    <table class="table table-striped table-dark table-fit" border="2" cellpadding="10">
+      <tr>
+        <td>Volcano Number</td>
+        <td>Volcano Name</td>
+        <td>Country</td>
+        <td>Primary Volcano Type</td>
+        <td>Activity Evidence</td>
+        <td>Last Known Eruption</td>
+        <td>Region</td>
+        <td>Subregion</td>
+        <td>Latitude</td>
+        <td>Longitude</td>
+        <td>Elevation (m)</td>
+        <td>Dominant Rock Type</td>
+        <td>Tectonic Setting</td>
+      </tr>
       {%for record in data %}
       <tr>
         {%for r in record%}
